--- a/main.html
+++ b/main.html
@@ -33,12 +33,16 @@
   </header>
 
   <div class="content">
+
+    <button id="delete_all">Sterge toate temele</button>
+
     <div id="citat"></div>
 
     <div class="text_container">
       <h2>Lista cu teme adaugate:</h2>
     </div>
     <div id="hw_container"></div>
+
   </div>
 
   <!-- Bootstrap JS Bundle (Includes Popper) -->
